@@ -119,6 +119,7 @@
     * 1120 FIX: Multisite filters Host/Service Contactgroup: Fixed livestatus exception...
     * 1158 FIX: Moved filter logic to visuals module...
             NOTE: Please refer to the migration notes!
+    * 1077 FIX: Fixed labelling of Y achsis in prediction graphs...
 
     WATO:
     * 1096 New WATO webservices: manage hosts via webinterface...
